assign1/tests/type-checking/bad/invalid-unsigned.c
#include "FenneC.h"

int main() {
  int i = -1U;
  int d = -4U;
  return 4294967296U;
}